# trng

./: .gitignore  Cargo.toml  README.md
concept/: tui.drawio
doc/: SPEC.md  spec.md
examples/: example.trng  loop.trng  setf.trng  seti.trng  setu.trng
libtrng/: Cargo.toml
libtrng/src/: interpreter.rs  lexer.rs  settings.rs
libtrng/src/tape/: tape.rs
src/lib/: interpreter.rs  lexer.rs  lib.rs  settings.rs  tape.rs
src/lib/tape/: error.rs  tape.rs
trng/: Cargo.toml
trng/src/: interpreter.rs  lexer.rs  lib.rs  main.rs  ui.rs
trng/src/tape/: error.rs  mod.rs  num.rs  tape.rs  tape_num.rs
trng/src/translator/: error.rs  mod.rs  translator.rs
trng/src/widgets/: data_tape.rs  editor.rs  op_details.rs
